syntax = "proto3";

package servertemplate.user.v1;

option csharp_namespace = "Servertemplate.User.V1";
option go_package = "servertemplate/user/v1;userv1";
option java_multiple_files = true;
option java_outer_classname = "UserProto";
option java_package = "com.servertemplate.user.v1";
option objc_class_prefix = "SUX";
option php_namespace = "Servertemplate\\User\\V1";

// Представление пользователя в бд.
message UserDB {
  // ID пользователя
  string id = 1;
  // Фамилия
  string last_name = 2;
  // Имя
  string first_name = 3;
  // Отчество
  string second_name = 4;
  // Возраст
  int32 age = 5;
  // Пароль
  string password = 6;
  // E-mail
  string email = 7;
  // Телефон
  string phone = 8;
}

// Представление пользователя для создания новой записи в бд.
message UserCreate {
  // ID пользователя
  string id = 1;
  // Фамилия
  string last_name = 2;
  // Имя
  string first_name = 3;
  // Отчество
  string second_name = 4;
  // Возраст
  int32 age = 5;
  // Пароль
  string password = 6;
  // E-mail
  string email = 7;
  // Телефон
  string phone = 8;
}

// Представление пользователя для обновления записи в бд.
message UserUpdate {
  // Фамилия
  string last_name = 1;
  // Имя
  string first_name = 2;
  // Отчество
  string second_name = 3;
  // Возраст
  int32 age = 4;
  // Пароль
  string password = 5;
  // E-mail
  string email = 6;
  // Телефон
  string phone = 7;
}
